[package]
name = "twitterplot"
version = "0.1.0"
authors = ["Jon Moroney <darakian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitter-stream = "0.9.0"
serde_json = "1.0.41"
plotters = "0.2.8"
minifb = "0.13.0"
structopt = "0.3.3"
rand = "0.7.2"
